Fix AlbumRow jumping when releaved

--- a/data/application.css
+++ b/data/application.css
@@ -243,7 +243,7 @@ popover.background separator {
 }
 
 .albumrow {
-    padding: 0px;
+    padding: 4px;
 	background-color: transparent;
   	color: inherit;
 }
